# excel-translator

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
.claude/: settings.local.json
design/: batch_translation_methods.md  batch_translator_design.md
src/api/: routes.py  sse_manager.py
src/config/: logging_config.py  settings.py
src/models/: models.py
src/translator/: batch_translator.py  cell_translator.py  context_aware_batch_translator.py  context_aware_translator.py  data_type_config.py  enhanced_excel_handler.py  excel2html.py  excel_handler.py  html2excel.py  integrated_translator.py  simple_excel_html_translator.py  terminology_manager.py  translation_filter.py
tests/: test_context_aware_translation.py  test_simple_excel_html_translator.py  test_unnamed_column_handling.py
